<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.quiz.QuizFragment">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">

        <LinearLayout
                android:id="@+id/start_quiz_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:baselineAligned="false">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    android:text="@string/setup_quiz" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:padding="20dp"
                    android:text="@string/choose_questions" />

            <RadioGroup
                    android:id="@+id/quiz_choice"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:padding="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <RadioButton
                        android:id="@+id/diet_quiz"
                        android:text="@string/diet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"/>

                <RadioButton
                        android:id="@+id/diet_virus"
                        android:text="@string/coronavirus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
            </RadioGroup>

            <Button
                    android:id="@+id/btn_start_quiz"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/start_quiz" />

        </LinearLayout>

        <LinearLayout
                android:id="@+id/quiz_content"
                android:layout_width="match_parent"
                android:layout_height="600dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:baselineAligned="false"
                android:visibility="gone">

            <TextView
                    android:id="@+id/question_header"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    android:text="@string/question_header_number" />

            <TextView
                    android:id="@+id/question"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:gravity="center"
                    android:textSize="30sp" />

            <GridLayout
                    android:id="@+id/answers_grid"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_height="190dp"
                    android:orientation="horizontal"
                    android:columnCount="2">

                <Button
                        android:layout_width="160dp"
                        android:layout_height="90dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="10dp"
                        android:id="@+id/btn_answer_1" />

                <Button
                        android:layout_width="160dp"
                        android:layout_height="90dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="10dp"
                        android:id="@+id/btn_answer_2" />

                <Button
                        android:layout_width="160dp"
                        android:layout_height="90dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="10dp"
                        android:id="@+id/btn_answer_3" />

                <Button
                        android:layout_width="160dp"
                        android:layout_height="90dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="10dp"
                        android:id="@+id/btn_answer_4" />
            </GridLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                <Button
                        android:id="@+id/btn_end_quiz"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="20dp"
                        android:text="@string/end_quiz" />

                <Button
                        android:id="@+id/btn_next_question"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="20dp"
                        android:enabled="false"
                        android:text="@string/next_question" />

                <Button
                        android:id="@+id/btn_finish_quiz"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="20dp"
                        android:enabled="false"
                        android:text="@string/finish_quiz"
                        android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/quiz_summary_content"
                android:layout_width="match_parent"
                android:layout_height="600dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:baselineAligned="false"
                android:visibility="gone">

            <TextView
                    android:id="@+id/quiz_summary_header"
                    android:layout_width="match_parent"
                    android:layout_height="97dp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    android:text="@string/quiz_summary_header" />

            <TextView
                    android:id="@+id/quiz_summary_result"
                    android:layout_width="match_parent"
                    android:layout_height="97dp"
                    android:gravity="center"
                    android:textSize="30sp"
                    android:text="@string/quiz_summary_result" />

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="150dp"
                    android:orientation="horizontal">

                <Button
                        android:id="@+id/btn_start_over"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="20dp"
                        android:text="@string/start_over" />

                <Button
                        android:id="@+id/btn_exit_quiz"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="20dp"
                        android:text="@string/exit" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>