<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/chart_data_fragment_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.chart.ChartFragment">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:id="@+id/chart_data_input_layout"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinner" />

            <Button
                    android:id="@+id/start_date_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/pick_start_date" />

            <EditText
                    android:id="@+id/from_text"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/set_date"
                    android:focusable="false" />

            <Button
                    android:id="@+id/end_date_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/pick_end_date" />

            <EditText
                    android:id="@+id/to_text"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/set_date"
                    android:focusable="false" />

            <Button
                    android:id="@+id/draw_chart_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/draw_chart" />
        </LinearLayout>

        <LinearLayout
                android:id="@+id/chart_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone">

            <Button
                    android:id="@+id/change_search_criteria_btn"
                    android:text="@string/btn_change_search_criteria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/chart_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>