<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_light_grey"
        android:paddingTop="?attr/actionBarSize">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toTopOf="parent"
            android:baselineAligned="false">

            <Button
                    android:id="@+id/btn_activity_bmi"
                    android:layout_width="200sp"
                    android:layout_height="120dp"
                    android:layout_gravity="center_horizontal"
                    android:paddingTop="10dp"
                    android:text="@string/bmi_calculator"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            <Button
                    android:id="@+id/btn_activity_chart"
                    android:layout_width="200sp"
                    android:layout_height="120dp"
                    android:layout_gravity="center_horizontal"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/coronavirus_info"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            <Button
                    android:id="@+id/btn_activity_quiz"
                    android:layout_width="200sp"
                    android:layout_height="120dp"
                    android:layout_gravity="center_horizontal"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/quiz"
                    android:textSize="12sp"
                    android:textStyle="bold" />
        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>